--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -31,18 +31,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "109.34s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\r\n",
-      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://academicpages.github.io/files/paper1.pdf\r\n",
-      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://academicpages.github.io/files/paper2.pdf\r\n",
+      "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\n",
+      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://academicpages.github.io/files/paper1.pdf\n",
+      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://academicpages.github.io/files/paper2.pdf\n",
       "2015-10-01\tPaper Title Number 3\tJournal 1\tThis paper is about the number 3. The number 4 is left for future work.\tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://academicpages.github.io/files/paper3.pdf"
      ]
     }
@@ -62,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -86,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -97,6 +104,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -141,39 +161,59 @@
        "      <td>paper-title-number-3</td>\n",
        "      <td>http://academicpages.github.io/files/paper3.pdf</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-09-01</td>\n",
+       "      <td>Identifying Out-of-Distribution Samples in Rea...</td>\n",
+       "      <td>ECCV UNCV Workshop 2022 - Extended Abstract</td>\n",
+       "      <td>Convolutional Neural Networks (CNNs) are nowad...</td>\n",
+       "      <td>Yannik Blei, Nicolas Jourdan, and Nils Gahlert...</td>\n",
+       "      <td>paper-title-number-4</td>\n",
+       "      <td>https://arxiv.org/pdf/2209.00364.pdf</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "     pub_date                 title      venue  \\\n",
-       "0  2009-10-01  Paper Title Number 1  Journal 1   \n",
-       "1  2010-10-01  Paper Title Number 2  Journal 1   \n",
-       "2  2015-10-01  Paper Title Number 3  Journal 1   \n",
+       "    pub_date                                              title  \\\n",
+       "0 2009-10-01                               Paper Title Number 1   \n",
+       "1 2010-10-01                               Paper Title Number 2   \n",
+       "2 2015-10-01                               Paper Title Number 3   \n",
+       "3 2022-09-01  Identifying Out-of-Distribution Samples in Rea...   \n",
+       "\n",
+       "                                         venue  \\\n",
+       "0                                    Journal 1   \n",
+       "1                                    Journal 1   \n",
+       "2                                    Journal 1   \n",
+       "3  ECCV UNCV Workshop 2022 - Extended Abstract   \n",
        "\n",
        "                                             excerpt  \\\n",
        "0  This paper is about the number 1. The number 2...   \n",
        "1  This paper is about the number 2. The number 3...   \n",
        "2  This paper is about the number 3. The number 4...   \n",
+       "3  Convolutional Neural Networks (CNNs) are nowad...   \n",
        "\n",
        "                                            citation              url_slug  \\\n",
        "0  Your Name, You. (2009). \"Paper Title Number 1....  paper-title-number-1   \n",
        "1  Your Name, You. (2010). \"Paper Title Number 2....  paper-title-number-2   \n",
        "2  Your Name, You. (2015). \"Paper Title Number 3....  paper-title-number-3   \n",
+       "3  Yannik Blei, Nicolas Jourdan, and Nils Gahlert...  paper-title-number-4   \n",
        "\n",
        "                                         paper_url  \n",
        "0  http://academicpages.github.io/files/paper1.pdf  \n",
        "1  http://academicpages.github.io/files/paper2.pdf  \n",
-       "2  http://academicpages.github.io/files/paper3.pdf  "
+       "2  http://academicpages.github.io/files/paper3.pdf  \n",
+       "3             https://arxiv.org/pdf/2209.00364.pdf  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "publications = pd.read_csv(\"publications.tsv\", sep=\"\\t\", header=0)\n",
+    "publications = pd.read_excel(\"publications.xlsx\", header=0)\n",
     "publications\n"
    ]
   },
@@ -188,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -218,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -229,9 +269,9 @@
     "import os\n",
     "for row, item in publications.iterrows():\n",
     "    \n",
-    "    md_filename = str(item.pub_date) + \"-\" + item.url_slug + \".md\"\n",
-    "    html_filename = str(item.pub_date) + \"-\" + item.url_slug\n",
-    "    year = item.pub_date[:4]\n",
+    "    md_filename = str(item.pub_date.date()) + \"-\" + item.url_slug + \".md\"\n",
+    "    html_filename = str(item.pub_date.date()) + \"-\" + item.url_slug\n",
+    "    year = item.pub_date.year\n",
     "    \n",
     "    ## YAML variables\n",
     "    \n",
@@ -244,7 +284,7 @@
     "    if len(str(item.excerpt)) > 5:\n",
     "        md += \"\\nexcerpt: '\" + html_escape(item.excerpt) + \"'\"\n",
     "    \n",
-    "    md += \"\\ndate: \" + str(item.pub_date) \n",
+    "    md += \"\\ndate: \" + str(item.pub_date.date())\n",
     "    \n",
     "    md += \"\\nvenue: '\" + html_escape(item.venue) + \"'\"\n",
     "    \n",
@@ -280,7 +320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -288,11 +328,23 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "114.60s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2009-10-01-paper-title-number-1.md  2015-10-01-paper-title-number-3.md\r\n",
-      "2010-10-01-paper-title-number-2.md\r\n"
+      "'2009-10-01 00:00:00-paper-title-number-1.md'\n",
+      " 2009-10-01-paper-title-number-1.md\n",
+      "'2010-10-01 00:00:00-paper-title-number-2.md'\n",
+      " 2010-10-01-paper-title-number-2.md\n",
+      "'2015-10-01 00:00:00-paper-title-number-3.md'\n",
+      " 2015-10-01-paper-title-number-3.md\n",
+      " 2022-09-01-paper-title-number-4.md\n"
      ]
     }
    ],
@@ -302,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -310,29 +362,22 @@
    },
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "131.11s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\r\n",
-      "title: \"Paper Title Number 1\"\r\n",
-      "collection: publications\r\n",
-      "permalink: /publication/2009-10-01-paper-title-number-1\r\n",
-      "excerpt: 'This paper is about the number 1. The number 2 is left for future work.'\r\n",
-      "date: 2009-10-01\r\n",
-      "venue: 'Journal 1'\r\n",
-      "paperurl: 'http://academicpages.github.io/files/paper1.pdf'\r\n",
-      "citation: 'Your Name, You. (2009). &quot;Paper Title Number 1.&quot; <i>Journal 1</i>. 1(1).'\r\n",
-      "---\r\n",
-      "This paper is about the number 1. The number 2 is left for future work.\r\n",
-      "\r\n",
-      "[Download paper here](http://academicpages.github.io/files/paper1.pdf)\r\n",
-      "\r\n",
-      "Recommended citation: Your Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1)."
+      "cat: ../_publications/2009-10-01-paper-title-number-4.md: No such file or directory\n"
      ]
     }
    ],
    "source": [
-    "!cat ../_publications/2009-10-01-paper-title-number-1.md"
+    "!cat ../_publications/2022-09-01-paper-title-number-4.md"
    ]
   },
   {
@@ -363,7 +408,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
