added my publications

--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false
    },
@@ -40,17 +40,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "109.34s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+      "394.42s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "pub_date\ttitle\tvenue\texcerpt\tcitation\turl_slug\tpaper_url\n",
-      "2009-10-01\tPaper Title Number 1\tJournal 1\tThis paper is about the number 1. The number 2 is left for future work.\tYour Name, You. (2009). \"Paper Title Number 1.\" <i>Journal 1</i>. 1(1).\tpaper-title-number-1\thttp://academicpages.github.io/files/paper1.pdf\n",
-      "2010-10-01\tPaper Title Number 2\tJournal 1\tThis paper is about the number 2. The number 3 is left for future work.\tYour Name, You. (2010). \"Paper Title Number 2.\" <i>Journal 1</i>. 1(2).\tpaper-title-number-2\thttp://academicpages.github.io/files/paper2.pdf\n",
-      "2015-10-01\tPaper Title Number 3\tJournal 1\tThis paper is about the number 3. The number 4 is left for future work.\tYour Name, You. (2015). \"Paper Title Number 3.\" <i>Journal 1</i>. 1(3).\tpaper-title-number-3\thttp://academicpages.github.io/files/paper3.pdf"
+      "cat: publications.tsv: No such file or directory\n"
      ]
     }
    ],
@@ -69,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -93,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -133,42 +130,12 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>2009-10-01</td>\n",
-       "      <td>Paper Title Number 1</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 1. The number 2...</td>\n",
-       "      <td>Your Name, You. (2009). \"Paper Title Number 1....</td>\n",
-       "      <td>paper-title-number-1</td>\n",
-       "      <td>http://academicpages.github.io/files/paper1.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2010-10-01</td>\n",
-       "      <td>Paper Title Number 2</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 2. The number 3...</td>\n",
-       "      <td>Your Name, You. (2010). \"Paper Title Number 2....</td>\n",
-       "      <td>paper-title-number-2</td>\n",
-       "      <td>http://academicpages.github.io/files/paper2.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2015-10-01</td>\n",
-       "      <td>Paper Title Number 3</td>\n",
-       "      <td>Journal 1</td>\n",
-       "      <td>This paper is about the number 3. The number 4...</td>\n",
-       "      <td>Your Name, You. (2015). \"Paper Title Number 3....</td>\n",
-       "      <td>paper-title-number-3</td>\n",
-       "      <td>http://academicpages.github.io/files/paper3.pdf</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
        "      <td>2022-09-01</td>\n",
        "      <td>Identifying Out-of-Distribution Samples in Rea...</td>\n",
        "      <td>ECCV UNCV Workshop 2022 - Extended Abstract</td>\n",
        "      <td>Convolutional Neural Networks (CNNs) are nowad...</td>\n",
        "      <td>Yannik Blei, Nicolas Jourdan, and Nils Gahlert...</td>\n",
-       "      <td>paper-title-number-4</td>\n",
+       "      <td>ma_loss</td>\n",
        "      <td>https://arxiv.org/pdf/2209.00364.pdf</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
@@ -177,37 +144,22 @@
       ],
       "text/plain": [
        "    pub_date                                              title  \\\n",
-       "0 2009-10-01                               Paper Title Number 1   \n",
-       "1 2010-10-01                               Paper Title Number 2   \n",
-       "2 2015-10-01                               Paper Title Number 3   \n",
-       "3 2022-09-01  Identifying Out-of-Distribution Samples in Rea...   \n",
+       "0 2022-09-01  Identifying Out-of-Distribution Samples in Rea...   \n",
        "\n",
        "                                         venue  \\\n",
-       "0                                    Journal 1   \n",
-       "1                                    Journal 1   \n",
-       "2                                    Journal 1   \n",
-       "3  ECCV UNCV Workshop 2022 - Extended Abstract   \n",
+       "0  ECCV UNCV Workshop 2022 - Extended Abstract   \n",
        "\n",
        "                                             excerpt  \\\n",
-       "0  This paper is about the number 1. The number 2...   \n",
-       "1  This paper is about the number 2. The number 3...   \n",
-       "2  This paper is about the number 3. The number 4...   \n",
-       "3  Convolutional Neural Networks (CNNs) are nowad...   \n",
+       "0  Convolutional Neural Networks (CNNs) are nowad...   \n",
        "\n",
-       "                                            citation              url_slug  \\\n",
-       "0  Your Name, You. (2009). \"Paper Title Number 1....  paper-title-number-1   \n",
-       "1  Your Name, You. (2010). \"Paper Title Number 2....  paper-title-number-2   \n",
-       "2  Your Name, You. (2015). \"Paper Title Number 3....  paper-title-number-3   \n",
-       "3  Yannik Blei, Nicolas Jourdan, and Nils Gahlert...  paper-title-number-4   \n",
+       "                                            citation url_slug  \\\n",
+       "0  Yannik Blei, Nicolas Jourdan, and Nils Gahlert...  ma_loss   \n",
        "\n",
-       "                                         paper_url  \n",
-       "0  http://academicpages.github.io/files/paper1.pdf  \n",
-       "1  http://academicpages.github.io/files/paper2.pdf  \n",
-       "2  http://academicpages.github.io/files/paper3.pdf  \n",
-       "3             https://arxiv.org/pdf/2209.00364.pdf  "
+       "                              paper_url  \n",
+       "0  https://arxiv.org/pdf/2209.00364.pdf  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -258,7 +210,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -320,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -331,7 +283,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "114.60s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+      "399.70s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
      ]
     },
     {
@@ -344,7 +296,7 @@
       " 2010-10-01-paper-title-number-2.md\n",
       "'2015-10-01 00:00:00-paper-title-number-3.md'\n",
       " 2015-10-01-paper-title-number-3.md\n",
-      " 2022-09-01-paper-title-number-4.md\n"
+      " 2022-09-01-ma_loss.md\n"
      ]
     }
    ],
@@ -354,7 +306,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -365,14 +317,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "131.11s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+      "404.90s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "cat: ../_publications/2009-10-01-paper-title-number-4.md: No such file or directory\n"
+      "cat: ../_publications/2022-09-01-paper-title-number-4.md: No such file or directory\n"
      ]
     }
    ],
