--- a/markdown_generator/talks.ipynb
+++ b/markdown_generator/talks.ipynb
@@ -22,7 +22,22 @@
     "deletable": true,
     "editable": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_12667/3026406390.py:1: DeprecationWarning: \n",
+      "Pyarrow will become a required dependency of pandas in the next major release of pandas (pandas 3.0),\n",
+      "(to allow more performant data types, such as the Arrow string type, and better interoperability with other libraries)\n",
+      "but was not found to be installed on your system.\n",
+      "If this would cause problems for you,\n",
+      "please provide us feedback at https://github.com/pandas-dev/pandas/issues/54466\n",
+      "        \n",
+      "  import pandas as pd\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import os"
@@ -56,10 +71,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\r\n",
-      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
-      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n",
+      "title\ttype\turl_slug\tvenue\tdate\tlocation\ttalk_url\tdescription\n",
+      "Talk 1 on Relevant Topic in Your Field\tTalk\ttalk-1\tUC San Francisco, Department of Testing\t2012-03-01\tSan Francisco, California\t\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "Tutorial 1 on Relevant Topic in Your Field\tTutorial\ttutorial-1\tUC-Berkeley Institute for Testing Science\t2013-03-01\tBerkeley CA, USA\thttp://exampleurl.com\tThis is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
+      "Talk 2 on Relevant Topic in Your Field\tTalk\ttalk-2\tLondon School of Testing\t2014-02-01\tLondon, UK\thttp://example2.com\tThis is a description of your talk, which is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n",
       "Conference Proceeding talk 3 on Relevant Topic in Your Field\tConference proceedings talk\ttalk-3\tTesting Institute of America 2014 Annual Conference\t2014-03-01\tLos Angeles, CA\t\tThis is a description of your conference proceedings talk, note the different field in type. You can put anything in this field."
      ]
     }
@@ -92,6 +107,19 @@
      "data": {
       "text/html": [
        "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
        "<table border=\"1\" class=\"dataframe\">\n",
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
@@ -313,8 +341,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2012-03-01-talk-1.md\t  2014-02-01-talk-2.md\r\n",
-      "2013-03-01-tutorial-1.md  2014-03-01-talk-3.md\r\n"
+      "2012-03-01-talk-1.md\t  2014-02-01-talk-2.md\n",
+      "2013-03-01-tutorial-1.md  2014-03-01-talk-3.md\n"
      ]
     }
    ],
@@ -335,19 +363,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "---\r\n",
-      "title: \"Tutorial 1 on Relevant Topic in Your Field\"\r\n",
-      "collection: talks\r\n",
-      "type: \"Tutorial\"\r\n",
-      "permalink: /talks/2013-03-01-tutorial-1\r\n",
-      "venue: \"UC-Berkeley Institute for Testing Science\"\r\n",
-      "date: 2013-03-01\r\n",
-      "location: \"Berkeley CA, USA\"\r\n",
-      "---\r\n",
-      "\r\n",
-      "[More information here](http://exampleurl.com)\r\n",
-      "\r\n",
-      "This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\r\n"
+      "---\n",
+      "title: \"Tutorial 1 on Relevant Topic in Your Field\"\n",
+      "collection: talks\n",
+      "type: \"Tutorial\"\n",
+      "permalink: /talks/2013-03-01-tutorial-1\n",
+      "venue: \"UC-Berkeley Institute for Testing Science\"\n",
+      "date: 2013-03-01\n",
+      "location: \"Berkeley CA, USA\"\n",
+      "---\n",
+      "\n",
+      "[More information here](http://exampleurl.com)\n",
+      "\n",
+      "This is a description of your tutorial, note the different field in type. This is a markdown files that can be all markdown-ified like any other post. Yay markdown!\n"
      ]
     }
    ],
@@ -372,7 +400,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
