--- a/_publications/2022-09-01-ma_loss.md
+++ b/_publications/2022-09-01-ma_loss.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2022-09-01-ma_loss
 excerpt: 'Convolutional Neural Networks (CNNs) are nowadays often employed in vision-based perception stacks for safetycritical applications such as autonomous driving or Unmanned Aerial Vehicles (UAVs). Due to the safety requirements in those use cases, it is important to know the limitations of the CNN and, thus, to detect Out-of-Distribution (OOD) samples. In this work, we present an approach to enable OOD detection for 2D object detection by employing the margin entropy (ME) loss.'
 date: 2022-09-01
-venue: 'ECCV UNCV Workshop 2022 - Extended Abstract'
+venue: 'ECCV UNCV Workshop'
 paperurl: 'https://arxiv.org/pdf/2209.00364.pdf'
 citation: 'Yannik Blei, Nicolas Jourdan, and Nils Gahlert. ¨ Identifying Out-of-Distribution Samples in Real-Time for Safety-Critical 2D Object Detection with Margin Entropy Loss. arXiv:2209.00364 [cs]. Sept. 2022'
 ---
