Fixed date time bug and added new publication.

--- a/_publications/2023-10-08-lan_grasp.md
+++ b/_publications/2023-10-08-lan_grasp.md
@@ -4,7 +4,7 @@ collection: publications
 permalink: /publication/2023-10-08-lan_grasp
 excerpt: 'In this paper, we propose LAN-grasp, a novel approach towards more appropriate semantic grasping. We use foundation models to provide the robot with a deeper understanding of the objects, the right place to grasp an object, or even the parts to avoid. This allows our robot to grasp and utilize objects in a more meaningful and safe manner. We leverage the combination of a Large Language Model, a Vision Language Model, and a traditional grasp planner to generate grasps demonstrating a deeper semantic understanding of the objects. We first prompt the Large Language Model about which object part is appropriate for grasping. Next, the Vision Language Model identifies the corresponding part in the object image. Finally, we generate grasp proposals in the region proposed by the Vision Language Model.'
 date: 2023-10-08
-venue: 'arXiv'
+venue: 'ISRR'
 paperurl: 'https://arxiv.org/pdf/2311.17776.pdf'
 citation: 'Reihaneh Mirjalili, Michael Krawez, Simone Silenzi, Yannik Blei, and Wolfram Burgard. Lan-grasp: Using large language models for semantic object grasping. arXiv preprint arXiv:2310.05239, Oct 2023'
 ---
