--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -2,6 +2,11 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "deletable": true,
     "editable": true
@@ -31,18 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "394.42s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -66,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -90,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -132,11 +130,31 @@
        "      <th>0</th>\n",
        "      <td>2022-09-01</td>\n",
        "      <td>Identifying Out-of-Distribution Samples in Rea...</td>\n",
-       "      <td>ECCV UNCV Workshop 2022 - Extended Abstract</td>\n",
+       "      <td>ECCV UNCV Workshop</td>\n",
        "      <td>Convolutional Neural Networks (CNNs) are nowad...</td>\n",
        "      <td>Yannik Blei, Nicolas Jourdan, and Nils Gahlert...</td>\n",
        "      <td>ma_loss</td>\n",
        "      <td>https://arxiv.org/pdf/2209.00364.pdf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2023-10-08</td>\n",
+       "      <td>LAN-grasp: Using Large Language Models for Sem...</td>\n",
+       "      <td>ISRR</td>\n",
+       "      <td>In this paper, we propose LAN-grasp, a novel a...</td>\n",
+       "      <td>Reihaneh Mirjalili, Michael Krawez, Simone Sil...</td>\n",
+       "      <td>lan_grasp</td>\n",
+       "      <td>https://arxiv.org/pdf/2311.17776.pdf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2024-09-25</td>\n",
+       "      <td>CloudTrack: Scalable UAV Tracking with Cloud S...</td>\n",
+       "      <td>arxiv</td>\n",
+       "      <td>Nowadays, unmanned aerial vehicles (UAVs) are ...</td>\n",
+       "      <td>Yannik Blei, Michael Krawez, Nisarga Nilavadi,...</td>\n",
+       "      <td>cloud_track</td>\n",
+       "      <td>https://arxiv.org/pdf/2409.16111</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -145,27 +163,33 @@
       "text/plain": [
        "    pub_date                                              title  \\\n",
        "0 2022-09-01  Identifying Out-of-Distribution Samples in Rea...   \n",
+       "1 2023-10-08  LAN-grasp: Using Large Language Models for Sem...   \n",
+       "2 2024-09-25  CloudTrack: Scalable UAV Tracking with Cloud S...   \n",
        "\n",
-       "                                         venue  \\\n",
-       "0  ECCV UNCV Workshop 2022 - Extended Abstract   \n",
+       "                venue                                            excerpt  \\\n",
+       "0  ECCV UNCV Workshop  Convolutional Neural Networks (CNNs) are nowad...   \n",
+       "1                ISRR  In this paper, we propose LAN-grasp, a novel a...   \n",
+       "2               arxiv  Nowadays, unmanned aerial vehicles (UAVs) are ...   \n",
        "\n",
-       "                                             excerpt  \\\n",
-       "0  Convolutional Neural Networks (CNNs) are nowad...   \n",
-       "\n",
-       "                                            citation url_slug  \\\n",
-       "0  Yannik Blei, Nicolas Jourdan, and Nils Gahlert...  ma_loss   \n",
+       "                                            citation     url_slug  \\\n",
+       "0  Yannik Blei, Nicolas Jourdan, and Nils Gahlert...      ma_loss   \n",
+       "1  Reihaneh Mirjalili, Michael Krawez, Simone Sil...    lan_grasp   \n",
+       "2  Yannik Blei, Michael Krawez, Nisarga Nilavadi,...  cloud_track   \n",
        "\n",
        "                              paper_url  \n",
-       "0  https://arxiv.org/pdf/2209.00364.pdf  "
+       "0  https://arxiv.org/pdf/2209.00364.pdf  \n",
+       "1  https://arxiv.org/pdf/2311.17776.pdf  \n",
+       "2      https://arxiv.org/pdf/2409.16111  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "publications = pd.read_excel(\"publications.xlsx\", header=0)\n",
+    "publications[\"pub_date\"] = pd.to_datetime(publications[\"pub_date\"])\n",
     "publications\n"
    ]
   },
@@ -180,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -210,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -220,9 +244,11 @@
    "source": [
     "import os\n",
     "for row, item in publications.iterrows():\n",
+    "    # turn the pandas pub_date into a python datetime object\n",
+    "    pub_date = str(item.pub_date.date)\n",
     "    \n",
-    "    md_filename = str(item.pub_date.date()) + \"-\" + item.url_slug + \".md\"\n",
-    "    html_filename = str(item.pub_date.date()) + \"-\" + item.url_slug\n",
+    "    md_filename = pub_date + \"-\" + item.url_slug + \".md\"\n",
+    "    html_filename = pub_date + \"-\" + item.url_slug\n",
     "    year = item.pub_date.year\n",
     "    \n",
     "    ## YAML variables\n",
@@ -236,7 +262,7 @@
     "    if len(str(item.excerpt)) > 5:\n",
     "        md += \"\\nexcerpt: '\" + html_escape(item.excerpt) + \"'\"\n",
     "    \n",
-    "    md += \"\\ndate: \" + str(item.pub_date.date())\n",
+    "    md += \"\\ndate: \" + pub_date\n",
     "    \n",
     "    md += \"\\nvenue: '\" + html_escape(item.venue) + \"'\"\n",
     "    \n",
@@ -346,7 +372,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "python-3.10.12",
    "language": "python",
    "name": "python3"
   },
