--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
@@ -64,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 24,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -182,7 +182,7 @@
        "2      https://arxiv.org/pdf/2409.16111  "
       ]
      },
-     "execution_count": 14,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -245,7 +245,7 @@
     "import os\n",
     "for row, item in publications.iterrows():\n",
     "    # turn the pandas pub_date into a python datetime object\n",
-    "    pub_date = str(item.pub_date.date)\n",
+    "    pub_date = str(item.pub_date.date())\n",
     "    \n",
     "    md_filename = pub_date + \"-\" + item.url_slug + \".md\"\n",
     "    html_filename = pub_date + \"-\" + item.url_slug\n",
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -306,23 +306,15 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "399.70s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "'2009-10-01 00:00:00-paper-title-number-1.md'\n",
-      " 2009-10-01-paper-title-number-1.md\n",
-      "'2010-10-01 00:00:00-paper-title-number-2.md'\n",
-      " 2010-10-01-paper-title-number-2.md\n",
-      "'2015-10-01 00:00:00-paper-title-number-3.md'\n",
-      " 2015-10-01-paper-title-number-3.md\n",
-      " 2022-09-01-ma_loss.md\n"
+      " 2022-09-01-ma_loss.md\n",
+      " 2023-10-08-lan_grasp.md\n",
+      " 2024-09-25-cloud_track.md\n",
+      "'<bound method Timestamp.date of Timestamp('\\''2022-09-01 00:00:00'\\'')>-ma_loss.md'\n",
+      "'<bound method Timestamp.date of Timestamp('\\''2023-10-08 00:00:00'\\'')>-lan_grasp.md'\n",
+      "'<bound method Timestamp.date of Timestamp('\\''2024-09-25 00:00:00'\\'')>-cloud_track.md'\n"
      ]
     }
    ],
@@ -332,20 +324,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 28,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "404.90s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
