Update publicaitons list.

--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -36,11 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 30,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "517.18s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -64,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 31,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -88,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -182,7 +189,7 @@
        "2      https://arxiv.org/pdf/2409.16111  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 33,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -234,7 +241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -298,13 +305,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "522.37s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -324,13 +338,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 36,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "527.51s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
