Update llm-pack citation

--- a/_publications/2025-11-03-llm_pack.md
+++ b/_publications/2025-11-03-llm_pack.md
@@ -24,7 +24,7 @@ its performance. We will make the source code of LLMPack publicly available upon
 date: 2025-11-03
 venue: 'arxiv'
 paperurl: 'https://arxiv.org/pdf/2503.08445'
-citation: 'Yannik Blei, Michael Krawez, Tobias Jülg, Pierre Krack, Florian Walter and Wolfram Burgard'
+citation: 'Yannik Blei, Michael Krawez, Tobias Jülg, Pierre Krack, Florian Walter and Wolfram Burgard. LLM-Pack: Intuitive Grocery Handling for Logistics Applications. arXiv:2503.08445, Mar 2025'
 ---
 Robotics and automation are increasingly influential in logistics but remain largely confined to traditional
 warehouses. In grocery retail, advancements such as cashier-less
