--- a/markdown_generator/publications.ipynb
+++ b/markdown_generator/publications.ipynb
@@ -36,18 +36,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "517.18s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -71,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -95,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -157,11 +150,21 @@
        "      <th>2</th>\n",
        "      <td>2024-09-25</td>\n",
        "      <td>CloudTrack: Scalable UAV Tracking with Cloud S...</td>\n",
-       "      <td>arxiv</td>\n",
+       "      <td>ICRA</td>\n",
        "      <td>Nowadays, unmanned aerial vehicles (UAVs) are ...</td>\n",
        "      <td>Yannik Blei, Michael Krawez, Nisarga Nilavadi,...</td>\n",
        "      <td>cloud_track</td>\n",
        "      <td>https://arxiv.org/pdf/2409.16111</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2025-11-03</td>\n",
+       "      <td>LLM-Pack: Intuitive Grocery Handling for Logis...</td>\n",
+       "      <td>arxiv</td>\n",
+       "      <td>Robotics and automation are increasingly influ...</td>\n",
+       "      <td>Yannik Blei, Michael Krawez, Tobias Jülg, Pier...</td>\n",
+       "      <td>llm_pack</td>\n",
+       "      <td>https://arxiv.org/pdf/2503.08445</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -172,24 +175,28 @@
        "0 2022-09-01  Identifying Out-of-Distribution Samples in Rea...   \n",
        "1 2023-10-08  LAN-grasp: Using Large Language Models for Sem...   \n",
        "2 2024-09-25  CloudTrack: Scalable UAV Tracking with Cloud S...   \n",
+       "3 2025-11-03  LLM-Pack: Intuitive Grocery Handling for Logis...   \n",
        "\n",
        "                venue                                            excerpt  \\\n",
        "0  ECCV UNCV Workshop  Convolutional Neural Networks (CNNs) are nowad...   \n",
        "1                ISRR  In this paper, we propose LAN-grasp, a novel a...   \n",
-       "2               arxiv  Nowadays, unmanned aerial vehicles (UAVs) are ...   \n",
+       "2                ICRA  Nowadays, unmanned aerial vehicles (UAVs) are ...   \n",
+       "3               arxiv  Robotics and automation are increasingly influ...   \n",
        "\n",
        "                                            citation     url_slug  \\\n",
        "0  Yannik Blei, Nicolas Jourdan, and Nils Gahlert...      ma_loss   \n",
        "1  Reihaneh Mirjalili, Michael Krawez, Simone Sil...    lan_grasp   \n",
        "2  Yannik Blei, Michael Krawez, Nisarga Nilavadi,...  cloud_track   \n",
+       "3  Yannik Blei, Michael Krawez, Tobias Jülg, Pier...     llm_pack   \n",
        "\n",
        "                              paper_url  \n",
        "0  https://arxiv.org/pdf/2209.00364.pdf  \n",
        "1  https://arxiv.org/pdf/2311.17776.pdf  \n",
-       "2      https://arxiv.org/pdf/2409.16111  "
+       "2      https://arxiv.org/pdf/2409.16111  \n",
+       "3      https://arxiv.org/pdf/2503.08445  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -211,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "metadata": {
     "collapsed": true,
     "deletable": true,
@@ -241,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -305,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false,
     "deletable": true,
@@ -313,22 +320,11 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "522.37s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " 2022-09-01-ma_loss.md\n",
-      " 2023-10-08-lan_grasp.md\n",
-      " 2024-09-25-cloud_track.md\n",
-      "'<bound method Timestamp.date of Timestamp('\\''2022-09-01 00:00:00'\\'')>-ma_loss.md'\n",
-      "'<bound method Timestamp.date of Timestamp('\\''2023-10-08 00:00:00'\\'')>-lan_grasp.md'\n",
-      "'<bound method Timestamp.date of Timestamp('\\''2024-09-25 00:00:00'\\'')>-cloud_track.md'\n"
+      "2022-09-01-ma_loss.md\t 2024-09-25-cloud_track.md\n",
+      "2023-10-08-lan_grasp.md  2025-11-03-llm_pack.md\n"
      ]
     }
    ],
@@ -338,20 +334,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false,
     "deletable": true,
     "editable": true
    },
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "527.51s - pydevd: Sending message related to process being replaced timed-out after 5 seconds\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
